Revision history for Perl distribution Music-Harmonica-Tabs

1.01 - ??
 - Minor parsing fix.
 - Minor rendering improvements.

1.00 - 2025-01-26
 - Minor rendering improvements.
 - Support tunings not written in the key of C.
 - Add support for the "Melody Maker" and natural minor tuning.

0.04 - 2025-01-25
 - Support re in addition to ré for the D note in the input music.
 - Support Ut in addition to do, for the C note.
 - Support ’ in addition to ' to temporarily increase the current octave.
 - Improve error messages.

0.03 - 2025-01-25
 - Improve rendering of the tabs with consistent new lines.
 - Allows to filter the tunings that are used to generate a tab.

0.02 - 2025-01-24
 - Improve the sort order of the output
 - Add transposition support
 - Simpler and more powerful handling of bends (that are generated, rather than
   using separately defined tunings).

0.01 - 2025-01-19
 - Initial release